web/book/tests/documentation/snapshots/documentation__book__reference__syntax__case__0.snap
---
source: web/book/tests/documentation/book.rs
expression: "from employees\nderive distance = case [\n  city == \"Calgary\" => 0,\n  city == \"Edmonton\" => 300,\n]\n"
---
SELECT
    *,
    CASE
        WHEN city = 'Calgary' THEN 0 WHEN city = 'Edmonton' THEN 300 ELSE NULL
    END AS distance
FROM employees
